--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="/assets/css/main.css" type="text/css" />
   <!-- normalize -->
-  <link rel="stylesheet" href="/assets/css/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/normalize.css" type="text/css" />
 
   <!-- js for Brwoser -->
   <!--[if lt IE 9]>
