--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
   <title>Het Patel - Fullstack Web Developer Portfolio</title>
   <!-- favicon -->
-  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
   <!-- Bootstrap 4.5 -->
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" />
   <!-- animate -->
-  <link rel="stylesheet" href="/assets/css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/animate.css" type="text/css" />
   <!-- Swiper -->
-  <link rel="stylesheet" href="/assets/css/swiper.min.css" />
+  <link rel="stylesheet" href="assets/css/swiper.min.css" />
   <!-- icons -->
-  <link rel="stylesheet" href="/assets/css/icons.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/icons.css" type="text/css" />
   <!-- aos -->
-  <link rel="stylesheet" href="/assets/css/aos.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/aos.css" type="text/css" />
   <!-- main css -->
-  <link rel="stylesheet" href="/assets/css/main.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/main.css" type="text/css" />
   <!-- normalize -->
-  <link rel="stylesheet" href="/assets/css/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/normalize.css" type="text/css" />
 
   <!-- js for Brwoser -->
   <!--[if lt IE 9]>
@@ -50,7 +50,7 @@
           <!-- navbar -->
           <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand c-white" href="/index.html">
-              <img class="logo" src="/assets/img/logo.svg" alt="logo" />
+              <img class="logo" src="assets/img/logo.svg" alt="logo" />
             </a>
             <button class="navbar-toggler menu ripplemenu" type="button" data-toggle="collapse"
               data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -157,7 +157,7 @@
                 </div>
               </div>
               <div class="img__head">
-                <img class="illy" src="/assets/img/crypto/crypto-head02.png" />
+                <img class="illy" src="assets/img/crypto/crypto-head02.png" />
               </div>
               <div class="col-md-10 col-lg-8">
                 <div class="Countdown-timer">
@@ -242,7 +242,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="0">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/statistics.svg" />
+                        <img src="assets/img/icons/statistics.svg" />
                       </div>
                       <h3>HTML5</h3>
                     </div>
@@ -250,7 +250,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="100">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/networking.svg" />
+                        <img src="assets/img/icons/networking.svg" />
                       </div>
                       <h3>CSS</h3>
                     </div>
@@ -258,7 +258,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="200">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/access.svg" />
+                        <img src="assets/img/icons/access.svg" />
                       </div>
                       <h3>JavaScript</h3>
                     </div>
@@ -266,7 +266,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="0">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/Decentralized.svg" />
+                        <img src="assets/img/icons/Decentralized.svg" />
                       </div>
                       <h3>Angular</h3>
                     </div>
@@ -274,7 +274,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="100">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/houses.svg" />
+                        <img src="assets/img/icons/houses.svg" />
                       </div>
                       <h3>Node.js</h3>
                     </div>
@@ -282,7 +282,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="200">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/technology.svg" />
+                        <img src="assets/img/icons/technology.svg" />
                       </div>
                       <h3>SQL</h3>
                     </div>
@@ -290,7 +290,7 @@
                   <div class="col-6 col-md-4 margin-b-5">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="0">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/energy.svg" />
+                        <img src="assets/img/icons/energy.svg" />
                       </div>
                       <h3>Git & GitHub</h3>
                     </div>
@@ -298,7 +298,7 @@
                   <div class="col-6 col-md-4">
                     <div class="item_pro" data-aos="fade-up" data-aos-delay="100">
                       <div class="icon_t">
-                        <img src="/assets/img/icons/leaves.svg" />
+                        <img src="assets/img/icons/leaves.svg" />
                       </div>
                       <h3>Hostinger</h3>
                     </div>
@@ -318,7 +318,7 @@
               <!-- img -->
               <div class="col-lg-6 mx-auto">
                 <div class="images" data-aos="fade-up" data-aos-delay="0">
-                  <img src="/assets/img/crypto/00415.png" width="300" />
+                  <img src="assets/img/crypto/00415.png" width="300" />
                 </div>
               </div>
               <!-- text -->
@@ -444,7 +444,7 @@
               <!-- img -->
               <div class="col-lg-6 ml-auto order-0 order-lg-1">
                 <div class="images">
-                  <img src="/assets/img/crypto/Privacy.png" width="100%" />
+                  <img src="assets/img/crypto/Privacy.png" width="100%" />
                 </div>
               </div>
             </div>
@@ -459,7 +459,7 @@
               <!-- img -->
               <div class="col-lg-6 mx-auto my-auto">
                 <div class="images">
-                  <img src="/assets/img/crypto/Token.png" width="100%" />
+                  <img src="assets/img/crypto/Token.png" width="100%" />
                 </div>
               </div>
               <!-- text -->
@@ -918,7 +918,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/01.png" />
+                          <img class="rounded-circle" src="assets/img/persons/01.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -934,7 +934,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/07.png" />
+                          <img class="rounded-circle" src="assets/img/persons/07.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -950,7 +950,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/15.png" />
+                          <img class="rounded-circle" src="assets/img/persons/15.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -967,7 +967,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/08.png" />
+                          <img class="rounded-circle" src="assets/img/persons/08.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -983,7 +983,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/04.png" />
+                          <img class="rounded-circle" src="assets/img/persons/04.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -999,7 +999,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/03.png" />
+                          <img class="rounded-circle" src="assets/img/persons/03.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1020,7 +1020,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/02.png" />
+                          <img class="rounded-circle" src="assets/img/persons/02.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1036,7 +1036,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/16.png" />
+                          <img class="rounded-circle" src="assets/img/persons/16.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1052,7 +1052,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/06.png" />
+                          <img class="rounded-circle" src="assets/img/persons/06.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1069,7 +1069,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/15.png" />
+                          <img class="rounded-circle" src="assets/img/persons/15.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1085,7 +1085,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/03.png" />
+                          <img class="rounded-circle" src="assets/img/persons/03.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1101,7 +1101,7 @@
                     <div class="col-6 col-md-4">
                       <div class="av_person">
                         <div class="avatar🐱">
-                          <img class="rounded-circle" src="/assets/img/persons/05.png" />
+                          <img class="rounded-circle" src="assets/img/persons/05.png" />
                           <a href="#" target="_blank" class="social">
                             <i class="tio linkedin_square"></i>
                           </a>
@@ -1123,7 +1123,7 @@
 
         <!-- Start form Contact -->
         <section class="contact_section padding-t-2" id="Contact">
-          <img class="img-fluid" src="/assets/img/crypto/02.png" />
+          <img class="img-fluid" src="assets/img/crypto/02.png" />
           <div class="container">
             <div class="row justify-content-md-center">
               <div class="col-md-8 col-lg-3 text-center">
@@ -1216,7 +1216,7 @@
         <div class="row justify-content-md-center text-center">
           <div class="col-md-8">
             <a class="logo c-white" href="index.html">
-              <img src="/assets/img/logo.svg" alt="">
+              <img src="assets/img/logo.svg" alt="">
             </a>
             <div class="social--media">
               <a href="mailto:het.patel5700@gmail.com" class="btn so-link">
@@ -1255,7 +1255,7 @@
           </div>
         </div>
       </div>
-      <img class="img-fluid img-footer" src="/assets/img/crypto/footer_grid.png" />
+      <img class="img-fluid img-footer" src="assets/img/crypto/footer_grid.png" />
     </footer>
 
     <!-- Back to top with progress indicator-->
@@ -1284,7 +1284,7 @@
     <!-- Start Section Loader -->
     <section class="loading_overlay">
       <div class="loader_logo">
-        <img class="logo" src="/assets/img/logo.svg" />
+        <img class="logo" src="assets/img/logo.svg" />
       </div>
     </section>
     <!-- End. Loader -->
@@ -1303,7 +1303,7 @@
             <div class="form_account">
               <div class="head_account">
                 <div class="img_profile">
-                  <img src="/assets/img/gif/avatar_01.jpg" />
+                  <img src="assets/img/gif/avatar_01.jpg" />
                 </div>
                 <div class="title">
                   <h4>Rakon.</h4>
@@ -1352,54 +1352,54 @@
   <!-- End. warapper -->
 
   <!-- jquery -->
-  <script src="/assets/js/jquery-3.5.0.js" type="text/javascript"></script>
+  <script src="assets/js/jquery-3.5.0.js" type="text/javascript"></script>
   <!-- jquery-migrate -->
-  <script src="/assets/js/jquery-migrate.min.js" type="text/javascript"></script>
+  <script src="assets/js/jquery-migrate.min.js" type="text/javascript"></script>
   <!-- popper -->
-  <script src="/assets/js/popper.min.js" type="text/javascript"></script>
+  <script src="assets/js/popper.min.js" type="text/javascript"></script>
   <!-- bootstrap -->
-  <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
   <!--
   ============
   vendor file
   ============
    -->
   <!-- particles -->
-  <script src="/assets/js/vendor/particles.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/particles.min.js" type="text/javascript"></script>
   <!-- TweenMax -->
-  <script src="/assets/js/vendor/TweenMax.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/TweenMax.min.js" type="text/javascript"></script>
   <!-- ScrollMagic -->
-  <script src="/assets/js/vendor/ScrollMagic.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/ScrollMagic.js" type="text/javascript"></script>
   <!-- animation.gsap -->
-  <script src="/assets/js/vendor/animation.gsap.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/animation.gsap.js" type="text/javascript"></script>
   <!-- addIndicators -->
-  <script src="/assets/js/vendor/debug.addIndicators.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/debug.addIndicators.min.js" type="text/javascript"></script>
   <!-- Swiper js -->
-  <script src="/assets/js/vendor/swiper.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/swiper.min.js" type="text/javascript"></script>
   <!-- countdown -->
-  <script src="/assets/js/vendor/countdown.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/countdown.js" type="text/javascript"></script>
   <!-- simpleParallax -->
-  <script src="/assets/js/vendor/simpleParallax.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/simpleParallax.min.js" type="text/javascript"></script>
   <!-- waypoints -->
-  <script src="/assets/js/vendor/waypoints.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/waypoints.min.js" type="text/javascript"></script>
   <!-- counterup -->
-  <script src="/assets/js/vendor/jquery.counterup.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/jquery.counterup.min.js" type="text/javascript"></script>
   <!-- charming -->
-  <script src="/assets/js/vendor/charming.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/charming.min.js" type="text/javascript"></script>
   <!-- imagesloaded -->
-  <script src="/assets/js/vendor/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/imagesloaded.pkgd.min.js" type="text/javascript"></script>
   <!-- BX-Slider -->
-  <script src="/assets/js/vendor/jquery.bxslider.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/jquery.bxslider.min.js" type="text/javascript"></script>
   <!-- Sharer -->
-  <script src="/assets/js/vendor/sharer.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/sharer.js" type="text/javascript"></script>
   <!-- sticky -->
-  <script src="/assets/js/vendor/sticky.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/sticky.min.js" type="text/javascript"></script>
   <!-- Aos -->
-  <script src="/assets/js/vendor/aos.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/aos.js" type="text/javascript"></script>
   <!-- main file -->
-  <script src="/assets/js/main.js" type="text/javascript"></script>
+  <script src="assets/js/main.js" type="text/javascript"></script>
   <!-- crypto -->
-  <script src="/assets/js/pages/crypto.js" type="text/javascript"></script>
+  <script src="assets/js/pages/crypto.js" type="text/javascript"></script>
 
 
 </body>
